--- a/python basics.ipynb
+++ b/python basics.ipynb
@@ -1207,7 +1207,7 @@
     "minimum = list1[0]\n",
     "\n",
     "for numbers in list1:\n",
-    "    if(numbers < mini):\n",
+    "    if(numbers < minimum):\n",
     "        minimum = numbers\n",
     "    else:\n",
     "        continue\n",
